--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li>
             <a href="2026-01-09小笠原觀景台_report.html">2026-01-09 小笠原觀景台</a>
         </li>
+        <a href=" 2026-01-08二延平觀日出_report.html ">二延平觀日出    </a>
         
     </ul>
 </body>
