--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         </li>
         <li>
             <a href="2026-01-09小笠原觀景台_report.html">2026-01-09 小笠原觀景台</a>
-       <a href=" 2026-01-08二延平觀日出_report.html ">二延平觀日出    </a>
         </li>
-        
+        <li>
+            <a href="2026-01-08二延平觀日出_report.html">2026-01-08 二延平觀日出</a>
+        </li>
     </ul>
 </body>
 </html>
