Update link text for 崙天天際線計畫 reports

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <a href="20260206崙天天際線計畫_report.html">2026-02-06 崙天天際線計畫</a>
         </li>
         <li>
-            <a href="20260206崙天天際線計畫_report1.html">2026-02-06 崙天天際線計畫 (備用1)</a>
+            <a href="20260206崙天天際線計畫_report1.html">2026-02-06 崙天天際線計畫 1</a>
         </li>
          <li>
-            <a href="20260206崙天天際線計畫_report2.html">2026-02-06 崙天天際線計畫 (備用2)</a>
+            <a href="20260206崙天天際線計畫_report2.html">2026-02-06 崙天天際線計畫 2</a>
         </li>
     </ul>
 </body>
